DevOps/force-app/main/default/objects/Risk__c/fields/Don_t_react_negatively_to_environment__c.field-meta.xml
<CustomField>
    <fullName>Don_t_react_negatively_to_environment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Don’t react negatively to environment</description>
    <inlineHelpText>Don’t react negatively to environment</inlineHelpText>
    <label>Don’t react negatively to environment</label>
    <type>Checkbox</type>
</CustomField>