DevOps/force-app/main/default/objects/Risk__c/fields/DVSAT_Score__c.field-meta.xml
<CustomField>
    <fullName>DVSAT_Score__c</fullName>
    <label>DVSAT Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>