DevOps/force-app/main/default/objects/Risk__c/fields/DVSAT_Status__c.field-meta.xml
<CustomField>
    <fullName>DVSAT_Status__c</fullName>
    <label>DVSAT Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>