DevOps/force-app/main/default/objects/Risk__c/fields/Endorsement_Manager_or_Senior_Manager__c.field-meta.xml
<CustomField>
    <fullName>Endorsement_Manager_or_Senior_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Endorsement (Manager or Senior Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Risks1</relationshipName>
    <type>Lookup</type>
</CustomField>