DevOps/force-app/main/default/objects/Risk__c/fields/Enrolled_Program__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_Program__c</fullName>
    <inlineHelpText>Select the Program that the client is enrolled in</inlineHelpText>
    <label>Enrolled Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reconnect</fullName>
            </value>
            <value>
                <fullName>Getting it Together</fullName>
            </value>
            <value>
                <fullName>Opportunity Pathways</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>