DevOps/force-app/main/default/objects/Risk__c/fields/Environmental_and_Social__c.field-meta.xml
<CustomField>
    <fullName>Environmental_and_Social__c</fullName>
    <label>Environmental and Social</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>