DevOps/force-app/main/default/objects/Risk__c/fields/Environmental_and_Social_Comments__c.field-meta.xml
<CustomField>
    <fullName>Environmental_and_Social_Comments__c</fullName>
    <label>Environmental and Social (Comments)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>