DevOps/force-app/main/default/objects/Risk__c/fields/Exit_Code_Agreed__c.field-meta.xml
<CustomField>
    <fullName>Exit_Code_Agreed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Primary and Secondary workers have agreed on code to end visit</description>
    <inlineHelpText>Primary and Secondary workers have agreed on code to end visit</inlineHelpText>
    <label>Exit Code Agreed</label>
    <type>Checkbox</type>
</CustomField>