DevOps/force-app/main/default/objects/Risk__c/fields/External_Notification_Required__c.field-meta.xml
<CustomField>
    <fullName>External_Notification_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Recording whether an external service provider needs to be made aware of the client risks, such as FACS, DSS, Police, DoJ, etc</description>
    <inlineHelpText>Does any other service provider need to be notified?</inlineHelpText>
    <label>External Notification Required</label>
    <type>Checkbox</type>
</CustomField>