DevOps/force-app/main/default/objects/Risk__c/fields/Extra_Support_Person__c.field-meta.xml
<CustomField>
    <fullName>Extra_Support_Person__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Support person required if risks identified</description>
    <inlineHelpText>A support person is required if risks have been identified</inlineHelpText>
    <label>Extra Support Person</label>
    <type>Checkbox</type>
</CustomField>