DevOps/force-app/main/default/objects/Risk__c/fields/First_Aid_Kit_is_in_car__c.field-meta.xml
<CustomField>
    <fullName>First_Aid_Kit_is_in_car__c</fullName>
    <defaultValue>false</defaultValue>
    <description>First Aid Kit is in car.</description>
    <inlineHelpText>First Aid Kit is in car.</inlineHelpText>
    <label>First Aid Kit is in car.</label>
    <type>Checkbox</type>
</CustomField>