DevOps/force-app/main/default/objects/Risk__c/fields/Has_the_Case_met_RoSH__c.field-meta.xml
<CustomField>
    <fullName>Has_the_Case_met_RoSH__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has the Case met RoSH?</label>
    <type>Checkbox</type>
</CustomField>