DevOps/force-app/main/default/objects/Risk__c/fields/Have_the_car_keys_in_your_hand__c.field-meta.xml
<CustomField>
    <fullName>Have_the_car_keys_in_your_hand__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Have the car keys in your hand.</description>
    <inlineHelpText>Have the car keys in your hand.</inlineHelpText>
    <label>Have the car keys in your hand.</label>
    <type>Checkbox</type>
</CustomField>