DevOps/force-app/main/default/objects/Risk__c/fields/Have_you_addressed_Risk_Factors__c.field-meta.xml
<CustomField>
    <fullName>Have_you_addressed_Risk_Factors__c</fullName>
    <description>Addressing Risk Factors identified in Review Process

If the home visit is going ahead, document how you are addressing risk factors at the bottom of the checklist.</description>
    <inlineHelpText>Addressing Risk Factors identified in Review Process

If the home visit is going ahead, document how you are addressing risk factors at the bottom of the checklist.</inlineHelpText>
    <label>Have you addressed Risk Factors?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>