DevOps/force-app/main/default/objects/Risk__c/fields/Have_you_completed_checklist__c.field-meta.xml
<CustomField>
    <fullName>Have_you_completed_checklist__c</fullName>
    <label>Have you completed checklist?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>