DevOps/force-app/main/default/objects/Risk__c/fields/Have_you_contacted_the_client__c.field-meta.xml
<CustomField>
    <fullName>Have_you_contacted_the_client__c</fullName>
    <description>Complete the Planning a Home Visit Checklist link HERE and document the perceived level of risk. If necessary Re-Assess the Level of Risk after talking to the client and making arrangements.

Wherever possible staff should meet the client in a more controlled setting (i.e. workplace) prior to considering a home visit.</description>
    <inlineHelpText>Complete the Planning a Home Visit Checklist link HERE and document the perceived level of risk. If necessary Re-Assess the Level of Risk after talking to the client and making arrangements.

Wherever possible staff should meet the client in a more c</inlineHelpText>
    <label>Have you contacted the client?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>