DevOps/force-app/main/default/objects/Risk__c/fields/Have_you_discussed_existing_risks__c.field-meta.xml
<CustomField>
    <fullName>Have_you_discussed_existing_risks__c</fullName>
    <description>Have you discussed existing risks with your immediate supervisor?
f you have identified any risk factors in the checklist identify how best to mitigate the risk/s and plan approved safe contact options.</description>
    <inlineHelpText>Have you discussed existing risks with your immediate supervisor?
f you have identified any risk factors in the checklist identify how best to mitigate the risk/s and plan approved safe contact options.</inlineHelpText>
    <label>Have you discussed existing risks</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>