DevOps/force-app/main/default/objects/Risk__c/fields/Have_you_Discussed_with_Line_Manager__c.field-meta.xml
<CustomField>
    <fullName>Have_you_Discussed_with_Line_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Have you Discussed with Line Manager</label>
    <type>Checkbox</type>
</CustomField>