DevOps/force-app/main/default/objects/Risk__c/fields/Have_you_prepared_to_manage_risk__c.field-meta.xml
<CustomField>
    <fullName>Have_you_prepared_to_manage_risk__c</fullName>
    <description>Managing Risk on Arrival

When you arrive at the home ensure you have considered all items in the checklist.</description>
    <inlineHelpText>Managing Risk on Arrival

When you arrive at the home ensure you have considered all items in the checklist.</inlineHelpText>
    <label>Have you prepared to manage risk?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>