DevOps/force-app/main/default/objects/Risk__c/fields/Have_you_reviewed_all_records__c.field-meta.xml
<CustomField>
    <fullName>Have_you_reviewed_all_records__c</fullName>
    <description>Review Records

Before planning a home visit review the client’s file, previously completed checklists and note any identified risks. Check CIMS or other relevant client management systems for Alert flags.

If special conditions are in place refer to checklist considerations.</description>
    <inlineHelpText>Review Records

Before planning a home visit review the client’s file, previously completed checklists and note any identified risks. Check CIMS or other relevant client management systems for Alert flags.

If special conditions are in place refer t</inlineHelpText>
    <label>Have you reviewed all records?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>