DevOps/force-app/main/default/objects/Risk__c/fields/High_Risk_Category__c.field-meta.xml
<CustomField>
    <fullName>High_Risk_Category__c</fullName>
    <label>High Risk Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>High_Risk_Category</valueSetName>
    </valueSet>
</CustomField>