DevOps/force-app/main/default/objects/Risk__c/fields/History_of_Violence__c.field-meta.xml
<CustomField>
    <fullName>History_of_Violence__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is there any suggestion of or history of violence?</description>
    <inlineHelpText>Is there any suggestion of or history of violence?</inlineHelpText>
    <label>History of Violence</label>
    <type>Checkbox</type>
</CustomField>