DevOps/force-app/main/default/objects/Risk__c/fields/Home_Visit_Concerns__c.field-meta.xml
<CustomField>
    <fullName>Home_Visit_Concerns__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Are you concerned about conducting a home visit? If so, discuss with your supervisor?</description>
    <inlineHelpText>Are you concerned about conducting a home visit? If so, discuss with your supervisor?</inlineHelpText>
    <label>Home Visit Concerns</label>
    <type>Checkbox</type>
</CustomField>