DevOps/force-app/main/default/objects/Risk__c/fields/Home_Visit_Confirmed_with_Participant__c.field-meta.xml
<CustomField>
    <fullName>Home_Visit_Confirmed_with_Participant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The day / date, time and reason for the visit has been confirmed with the Participant/Client</description>
    <inlineHelpText>The day / date, time and reason for the visit has been confirmed with the Participant/Client</inlineHelpText>
    <label>Home Visit Confirmed with Participant</label>
    <type>Checkbox</type>
</CustomField>