DevOps/force-app/main/default/objects/Risk__c/fields/Home_Visit_Exit_Code__c.field-meta.xml
<CustomField>
    <fullName>Home_Visit_Exit_Code__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Record the exit code that has been agreed between Primary and Secondary (Buddy) worker</description>
    <inlineHelpText>Record the exit code that has been agreed between Primary and Secondary (Buddy) worker</inlineHelpText>
    <label>Home Visit Exit Code</label>
    <type>Checkbox</type>
</CustomField>