DevOps/force-app/main/default/objects/Risk__c/fields/Home_Visit_logged_in_Outlook__c.field-meta.xml
<CustomField>
    <fullName>Home_Visit_logged_in_Outlook__c</fullName>
    <defaultValue>false</defaultValue>
    <description>You have logged the visit with first name of client, address, car registration number, mobile phone number you can be contacted on, arrival time and planned exit time in Outlook calendar.</description>
    <inlineHelpText>You have logged the visit with first name of client, address, car registration number, mobile phone number you can be contacted on, arrival time and planned exit time in Outlook calendar.</inlineHelpText>
    <label>Home Visit logged in Outlook</label>
    <type>Checkbox</type>
</CustomField>