DevOps/force-app/main/default/objects/Risk__c/fields/Home_Visit_Status__c.field-meta.xml
<CustomField>
    <fullName>Home_Visit_Status__c</fullName>
    <description>Status for each step of the process when preparing for a Home Visit</description>
    <inlineHelpText>Status for each step of the process when preparing for a Home Visit</inlineHelpText>
    <label>Home Visit Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial Assessment</fullName>
            </value>
            <value>
                <fullName>Planning</fullName>
            </value>
            <value>
                <fullName>Preparing for Home Visit</fullName>
            </value>
            <value>
                <fullName>Ready for Home Visit</fullName>
            </value>
            <value>
                <fullName>Home Visit Completed</fullName>
            </value>
            <value>
                <fullName>Unauthorised</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>