DevOps/force-app/main/default/objects/Risk__c/fields/Hospitalisation_Due_to_Mental_Health__c.field-meta.xml
<CustomField>
    <fullName>Hospitalisation_Due_to_Mental_Health__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the Participant / Client currently in hospital due to mental health?</description>
    <inlineHelpText>Is the Participant / Client currently in hospital due to mental health?</inlineHelpText>
    <label>Hospitalisation Due to Mental Health</label>
    <type>Checkbox</type>
</CustomField>