DevOps/force-app/main/default/objects/Risk__c/fields/If_participant_is_known_to_Social_Future__c.field-meta.xml
<CustomField>
    <fullName>If_participant_is_known_to_Social_Future__c</fullName>
    <description>If participant is known to Social Futures, are the conditions or assessments on file outdated?</description>
    <inlineHelpText>If participant is known to Social Futures, are the conditions or assessments on file outdated?</inlineHelpText>
    <label>If participant is known to Social Future</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>