DevOps/force-app/main/default/objects/Risk__c/fields/If_special_conditions_are_in_place_Note__c.field-meta.xml
<CustomField>
    <fullName>If_special_conditions_are_in_place_Note__c</fullName>
    <label>If special conditions are in place Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>