DevOps/force-app/main/default/objects/Risk__c/fields/If_the_agreed_signal_is_given_by_either__c.field-meta.xml
<CustomField>
    <fullName>If_the_agreed_signal_is_given_by_either__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the agreed signal is given by either staff member, leave the home immediately.</description>
    <inlineHelpText>If the agreed signal is given by either staff member, leave the home immediately.</inlineHelpText>
    <label>If the agreed signal is given by either</label>
    <type>Checkbox</type>
</CustomField>