DevOps/force-app/main/default/objects/Risk__c/fields/If_yes_specify_Client_children__c.field-meta.xml
<CustomField>
    <fullName>If_yes_specify_Client_children__c</fullName>
    <description>If yes, specify: Client children</description>
    <inlineHelpText>If yes, specify: Client children</inlineHelpText>
    <label>If yes, specify: Client children</label>
    <type>TextArea</type>
</CustomField>