DevOps/force-app/main/default/objects/Risk__c/fields/If_you_are_asked_to_leave_do_so__c.field-meta.xml
<CustomField>
    <fullName>If_you_are_asked_to_leave_do_so__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If you are asked to leave, do so.</description>
    <inlineHelpText>If you are asked to leave, do so.</inlineHelpText>
    <label>If you are asked to leave, do so.</label>
    <type>Checkbox</type>
</CustomField>