DevOps/force-app/main/default/objects/Risk__c/fields/If_you_have_attended_a_home_visit_and__c.field-meta.xml
<CustomField>
    <fullName>If_you_have_attended_a_home_visit_and__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If you have attended a home visit and identified risks, document the risk and any incident using standard procedures, so risk can be reassessed and managed.</description>
    <inlineHelpText>If you have attended a home visit and identified risks, document the risk and any incident using standard procedures, so risk can be reassessed and managed.</inlineHelpText>
    <label>If you have attended a home visit and</label>
    <type>Checkbox</type>
</CustomField>