DevOps/force-app/main/default/objects/Risk__c/fields/Inform_a_buddy_or_manager_of_the_visit__c.field-meta.xml
<CustomField>
    <fullName>Inform_a_buddy_or_manager_of_the_visit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Inform a buddy or manager of the visit, log the visit in Outlook.</description>
    <inlineHelpText>Inform a buddy or manager of the visit, log the visit in Outlook.</inlineHelpText>
    <label>Inform a buddy or manager of the visit</label>
    <type>Checkbox</type>
</CustomField>