DevOps/force-app/main/default/objects/Risk__c/fields/Inform_your_buddy_or_manager_of_any_issu__c.field-meta.xml
<CustomField>
    <fullName>Inform_your_buddy_or_manager_of_any_issu__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Inform your buddy or manager of any issues identified.</description>
    <inlineHelpText>Inform your buddy or manager of any issues identified.</inlineHelpText>
    <label>Inform your buddy or manager of any issu</label>
    <type>Checkbox</type>
</CustomField>