DevOps/force-app/main/default/objects/Risk__c/fields/Is_High_Priority__c.field-meta.xml
<CustomField>
    <fullName>Is_High_Priority__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is high priority?</label>
    <type>Checkbox</type>
</CustomField>