DevOps/force-app/main/default/objects/Risk__c/fields/isApproved__c.field-meta.xml
<CustomField>
    <fullName>isApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>if approved by the manager to send the notification</description>
    <label>isApproved</label>
    <type>Checkbox</type>
</CustomField>