DevOps/force-app/main/default/objects/Risk__c/fields/Keys_and_phone_in_hands_pockets__c.field-meta.xml
<CustomField>
    <fullName>Keys_and_phone_in_hands_pockets__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Car keys and mobile phone are in your hand and/or pockets.</description>
    <inlineHelpText>Car keys and mobile phone are in your hand and/or pockets.</inlineHelpText>
    <label>Keys and phone in hands / pockets</label>
    <type>Checkbox</type>
</CustomField>