DevOps/force-app/main/default/objects/Risk__c/fields/Known_Changes_to_Restrictions__c.field-meta.xml
<CustomField>
    <fullName>Known_Changes_to_Restrictions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Have there been any changes to the restriction since it was put in place?</description>
    <inlineHelpText>Have there been any changes to the restriction since it was put in place?</inlineHelpText>
    <label>Known Changes to Restrictions</label>
    <type>Checkbox</type>
</CustomField>