DevOps/force-app/main/default/objects/Risk__c/fields/Known_Record_of_Violence_Aggression__c.field-meta.xml
<CustomField>
    <fullName>Known_Record_of_Violence_Aggression__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has the client been identified by NSW Health, Housing NSW, NSW Family and Community Services, Police or any other NSW, interstate, commonwealth or community agency as having issues relating to violence or aggression in the past?</description>
    <inlineHelpText>Has the client been identified by NSW Health, Housing NSW, NSW Family and Community Services, Police or any other NSW, interstate, commonwealth or community agency as having issues relating to violence or aggression in the past?</inlineHelpText>
    <label>Known Record of Violence / Aggression</label>
    <type>Checkbox</type>
</CustomField>