DevOps/force-app/main/default/objects/Risk__c/fields/Known_risk_factors__c.field-meta.xml
<CustomField>
    <fullName>Known_risk_factors__c</fullName>
    <description>Are any of the following known to be risk factors: Note</description>
    <inlineHelpText>Are any of the following known to be risk factors: Note</inlineHelpText>
    <label>Known risk factors:</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>