DevOps/force-app/main/default/objects/Risk__c/fields/Listen_for_sounds_of_escalated_behaviour__c.field-meta.xml
<CustomField>
    <fullName>Listen_for_sounds_of_escalated_behaviour__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Listen for sounds of escalated behaviour or violence before knocking.</description>
    <inlineHelpText>Listen for sounds of escalated behaviour or violence before knocking.</inlineHelpText>
    <label>Listen for sounds of escalated behaviour</label>
    <type>Checkbox</type>
</CustomField>