DevOps/force-app/main/default/objects/Risk__c/fields/Local_DCJ_Office__c.field-meta.xml
<CustomField>
    <fullName>Local_DCJ_Office__c</fullName>
    <label>Local DCJ Office</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FACS Ballina</fullName>
            </value>
            <value>
                <fullName>FACS Coffs Harbour</fullName>
            </value>
            <value>
                <fullName>FACS Grafton</fullName>
            </value>
            <value>
                <fullName>FACS Lismore</fullName>
            </value>
            <value>
                <fullName>FACS Tweed Heads</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>