DevOps/force-app/main/default/objects/Risk__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lismore</fullName>
            </value>
            <value>
                <fullName>Grafton</fullName>
            </value>
            <value>
                <fullName>Ballina</fullName>
            </value>
            <value>
                <fullName>Mullumbimby</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>