DevOps/force-app/main/default/objects/Risk__c/fields/Lock_the_car_as_soon_as_you_are_in_it__c.field-meta.xml
<CustomField>
    <fullName>Lock_the_car_as_soon_as_you_are_in_it__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Lock the car as soon as you are in it.</description>
    <inlineHelpText>Lock the car as soon as you are in it.</inlineHelpText>
    <label>Lock the car as soon as you are in it.</label>
    <type>Checkbox</type>
</CustomField>