DevOps/force-app/main/default/objects/Risk__c/fields/Maintain_a_professional_relationship_at__c.field-meta.xml
<CustomField>
    <fullName>Maintain_a_professional_relationship_at__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Maintain a professional relationship at all times with the client, family and other residents.</description>
    <inlineHelpText>Maintain a professional relationship at all times with the client, family and other residents.</inlineHelpText>
    <label>Maintain a professional relationship at</label>
    <type>Checkbox</type>
</CustomField>