DevOps/force-app/main/default/objects/Risk__c/fields/Management_Plan_for_Client_Restrictions__c.field-meta.xml
<CustomField>
    <fullName>Management_Plan_for_Client_Restrictions__c</fullName>
    <description>If the client is to be managed with restrictions in place, please specify here</description>
    <inlineHelpText>If the client is to be managed with restrictions in place, please specify here</inlineHelpText>
    <label>Management Plan for Client Restrictions</label>
    <type>TextArea</type>
</CustomField>