DevOps/force-app/main/default/objects/Risk__c/fields/Medical_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Medical_Conditions__c</fullName>
    <label>Medical Conditions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fractures/cuts/bruising/abrasions</fullName>
            </value>
            <value>
                <fullName>Seizures/Epilepsy</fullName>
            </value>
            <value>
                <fullName>Respiratory conditions</fullName>
            </value>
            <value>
                <fullName>Allergies</fullName>
            </value>
            <value>
                <fullName>Skin conditions</fullName>
            </value>
            <value>
                <fullName>Endocrine conditions</fullName>
            </value>
            <value>
                <fullName>Diabetes</fullName>
            </value>
            <value>
                <fullName>Sleep disorders</fullName>
            </value>
            <value>
                <fullName>Incontinence</fullName>
            </value>
            <value>
                <fullName>Mental illness</fullName>
            </value>
            <value>
                <fullName>Dementia</fullName>
            </value>
            <value>
                <fullName>Chronic pain</fullName>
            </value>
            <value>
                <fullName>Identified intellectual or developmental disability</fullName>
            </value>
            <value>
                <fullName>Impaired cognition</fullName>
            </value>
            <value>
                <fullName>Obesity</fullName>
            </value>
            <value>
                <fullName>Teeth and gum conditions</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Not applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>