DevOps/force-app/main/default/objects/Risk__c/fields/Medical_Conditions_Comment__c.field-meta.xml
<CustomField>
    <fullName>Medical_Conditions_Comment__c</fullName>
    <label>Medical Conditions (Comment)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>