DevOps/force-app/main/default/objects/Risk__c/fields/Medical_Intervention_scale__c.field-meta.xml
<CustomField>
    <fullName>Medical_Intervention_scale__c</fullName>
    <label>Medical Intervention (scale)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>