DevOps/force-app/main/default/objects/Risk__c/fields/Mental_Health_Care_Plan__c.field-meta.xml
<CustomField>
    <fullName>Mental_Health_Care_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the client on a current mental health care plan?</description>
    <inlineHelpText>Is the client on a current mental health care plan?</inlineHelpText>
    <label>Mental Health Care Plan</label>
    <type>Checkbox</type>
</CustomField>