DevOps/force-app/main/default/objects/Risk__c/fields/Mental_Health_Provider_Contact__c.field-meta.xml
<CustomField>
    <fullName>Mental_Health_Provider_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related mental health provider if Yes is selected for under current mental health care</description>
    <inlineHelpText>If yes, please include contact details of the mental health provider</inlineHelpText>
    <label>Mental Health Provider Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Risks2</relationshipName>
    <type>Lookup</type>
</CustomField>