DevOps/force-app/main/default/objects/Risk__c/fields/Mobile_Phone_is_Fully_Charged__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Phone_is_Fully_Charged__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mobile phone is fully charged and working.</description>
    <inlineHelpText>Mobile phone is fully charged and working.</inlineHelpText>
    <label>Mobile Phone is Fully Charged</label>
    <type>Checkbox</type>
</CustomField>