DevOps/force-app/main/default/objects/Risk__c/fields/Mobile_Reception_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Reception_Coverage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>No mobile coverage or unreliable mobile reception?</description>
    <inlineHelpText>No mobile coverage or unreliable mobile reception?</inlineHelpText>
    <label>Mobile Reception Coverage</label>
    <type>Checkbox</type>
</CustomField>