DevOps/force-app/main/default/objects/Risk__c/fields/MRG_Decision_Tree_Completed__c.field-meta.xml
<CustomField>
    <fullName>MRG_Decision_Tree_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MRG Decision Tree Completed</label>
    <type>Checkbox</type>
</CustomField>