DevOps/force-app/main/default/objects/Risk__c/fields/Name_of_Person_Involved__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Person_Involved__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of Person Involved: Contact Record TypeEQUALSClient, General, Provider, Worker</description>
    <label>Name of Person Involved</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Risks3</relationshipName>
    <type>Lookup</type>
</CustomField>